--- a/css/styles.css
+++ b/css/styles.css
@@ -231,6 +231,75 @@ main{
 .form_boton_enviar:hover{
     background-color: #0056b3;
 }
-
-
-
+.titulo_preguntas_frecuentes{
+    font-size: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+}
+.preguntas_section{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    margin-right: 4rem;
+    margin-left: 4rem;
+}
+.preguntas_article{
+    transition: all ease 0.5s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 3rem;
+    background-color: #f9f9f9;
+    color: #395b50;
+    border: solid 1px black;
+    border-radius: 1rem;
+    cursor: pointer;
+}
+.preguntas_article h4{
+    font-size: 1.5rem;
+}
+.preguntas_article:hover{
+    transition: all ease 0.5s;
+    background-color: #395b50;
+    color: #f9f9f9;
+}
+/* ------------------------------------------------------------------ */
+/* MARCAS */
+.titulo_nuestras_marcas{
+    font-size: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+}
+.marca_imagen{
+    width: 15rem;
+    height: 15rem;
+    border: 2px solid black;
+}
+.marca_lamborguini{ /* Diferenciamos la imagen de lamborguini de las demás porque el borde es de un color diferente */
+    width: 15rem;
+    height: 15rem;
+    border: 2px solid darkgoldenrod;
+}
+.marca_imagen:hover{
+    cursor: pointer;
+}
+.titulo_nuestra_marca_nº1{
+    font-size: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+}
+.marcas_section h3{
+    font-size: 1.5rem;
+}
