--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,7 @@ main{
     height: auto; /* Para que el height se ajuste proporcionalmente al width */
     margin-bottom: 4rem;
     margin-left: 2rem;
+    border: 3px solid #395b50;
 }
 .titulo_inicio_bienvenido{
     font-size: 3rem;
@@ -136,7 +137,7 @@ main{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    gap: 1rem; /* Añadir espacio entre los elementos del section */
+    gap: 2rem; /* Añadir espacio entre los elementos del section */
 
 }
 .parrafo_inicio_article{
@@ -151,6 +152,88 @@ main{
 .parrafo_inicio_article p{
     font-size: 1.3rem;
 }
+
+.titulo_confiar_en_nosotros{
+    font-size: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+.confiar_en_nosotros_section{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem; /* Poner espacio entre los elementos del section */
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+.confiar_en_nosotros_article{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 2rem;
+    background-color: #395b50;
+    color: #c5d1eb;
+    border: 1px solid black;
+    border-radius: 1rem;
+}
+.confiar_en_nosotros_article:hover{
+    cursor: pointer;
+    background-color: #c5d1eb;
+    color: #395b50;
+}
+.confiar_en_nosotros_article h3{
+    margin-bottom: 0.5rem;
+}
+.titulo_noticias{
+    font-size: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 4rem;
+    margin-bottom: 3rem;
+}
+.noticias_section{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2rem;
+}
+.imagen_noticia{
+    transition: 0.5s all ease;
+    width: 40rem;
+    height: auto;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    border: 3px solid #395b50;
+}
+.imagen_noticia:hover{
+    transition: 0.5s all ease;
+    cursor: pointer;
+    opacity: 0.8;
+}
+.noticias_article{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+.noticias_article h4{
+    font-size: 1.5rem;
+}
+.noticias_article p{
+    font-size: 1.1rem;
+    text-align: justify;
+}
+
+
 /* ------------------------------------------------------------------ */
 /* CONTACTO */
 .red_logo{
@@ -348,4 +431,28 @@ main{
     font-size: 1.3rem;
     width: 30rem;
     text-align: justify;
+}
+/* ------------------------------------------------------------------ */
+/* PRODUCTOS */
+.imagen_producto{
+    width: 25rem;
+    height: auto;
+}
+.imagen_producto_ferrari{
+    width: 25rem;
+    height: 14.1rem;
+}
+.productos_section{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+.productos_article{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
 }
