--- a/css/styles.css
+++ b/css/styles.css
@@ -195,7 +195,7 @@ main{
     cursor: pointer;
     background-color: var(--color-terciario);
     color: var(--color-principal);
-    transform: translateY(-10px); /* Mueve 10px verticalmente hacia arriba el article */
+    transform: translateY(-0.8rem); /* Mueve 10px verticalmente hacia arriba el article */
 }
 .confiar_en_nosotros_article h3{
     margin-bottom: 0.5rem;
@@ -286,6 +286,44 @@ main{
 
 /* ------------------------------------------------------------------ */
 /* CONTACTO */
+.titulo_sobre_nosotros{
+    font-size: 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2rem;
+}
+.sobre_nosotros_section{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 2rem;
+    gap: 1rem;
+}
+.sobre_nosotros_article{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    padding: 2rem;
+    background-color: var(--color-terciario);
+    color: var(--color-principal);
+    border: 1px solid black;
+    border-radius: 1rem;
+    transition: 0.5s all ease;
+    max-width: 20rem;
+}
+.sobre_nosotros_article:hover{
+    cursor: pointer;
+    background-color: var(--color-principal);
+    color: var(--color-terciario);
+    transform: translateY(-0.8rem);
+    transition: 0.5s all ease;
+}
+.sobre_nosotros_article p{
+    text-align: justify;
+}
 .red_logo{
     width: 15rem;
     height: auto;
@@ -398,13 +436,17 @@ main{
     border-radius: 1rem;
     cursor: pointer;
 }
-.preguntas_article h4{
-    font-size: 1.5rem;
-}
 .preguntas_article:hover{
     transition: all ease 0.5s;
     background-color: var(--color-principal);
     color: #f9f9f9;
+    transform: translateY(-0.8rem);
+}
+.preguntas_article h4{
+    font-size: 1.5rem;
+}
+.preguntas_article p{
+    text-align: justify;
 }
 /* ------------------------------------------------------------------ */
 /* MARCAS */
@@ -449,7 +491,7 @@ main{
     border: solid 1px black;
     border-radius: 1rem;
 }
-.marcas_section{
+.marcas_section1, .marcas_section2{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -466,9 +508,10 @@ main{
 }
 .marca_lamborguini_article{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
+    gap: 2rem;
 }
 .marca_lamborguini_section{
     display: flex;
@@ -520,7 +563,7 @@ main{
 }
 .article_presentacion_lamborghini:hover{
     cursor: pointer;
-    transform: translateY(-10px);
+    transform: translateY(-0.8rem);
 }
 .article_presentacion_lamborghini img{
     width: 4rem;
@@ -714,6 +757,7 @@ main{
     background-color: var(--color-secundario);
     color: var(--color-terciario);
 }
+
 /* ------------------------------------------------------------------ */
 /* MEDIA QUERY */
 @media (max-width: 1030px){
@@ -723,24 +767,54 @@ main{
         flex-direction: column;
         align-items: center;
     }
-    /* Footer */
+    /* Footer en columna */
     .footer_enlaces li{
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    /* Section de las noticias */
+    .footer_enlaces a{
+        margin: 0.5rem;
+    }
+    /* Noticias */
     .noticias_section{
         display: flex;
         flex-direction: column;
         align-items: center;
     }
+    .noticias_article{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .imagen_noticia{
+        width: 25rem;
+        height: auto;
+    }
+    .noticias_article{
+        font-size: 1rem;
+    }
+    /* ¡Bienvenido a MotorMania! */
+
+    /* Nuestra marca colaboradora nº1 */
+    .marca_lamborguini_article{
+        max-width: 60%;
+    }
+    .sobre_nosotros_section{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
 @media (max-width: 600px){
-    .menu li {
+    /* Header en columna */
+    .menu li{
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+    .menu a{
+        margin: 0.5rem;
     }
 }
 @media (max-width: 700px){
@@ -761,7 +835,7 @@ main{
         align-items: center;
     }
     .titulo_confiar_en_nosotros{
-        font-size: 2rem;
+        font-size: 1.5rem;
         align-items: center;
     }
     .titulo_productos_disponibles{
@@ -789,12 +863,15 @@ main{
         align-items: center;
     }
     .titulo_nuestras_marcas{
-        font-size: 1.8rem;
+        font-size: 1.7rem;
         align-items: center;
     }
-    /* ¡Bienvenido a MotorMania! */
-
-
+    .titulo_sobre_nosotros{
+        font-size: 2rem;
+    }
+    .section_presentacion_lamborghini h2{ /* "Lamborghini: La cumbre del lujo y el rendimiento" */
+        font-size: 1.4rem;
+    }
     /* ¿Por qué confiar en MotorMania? */
     .confiar_en_nosotros_section{
         display: flex;
@@ -804,23 +881,46 @@ main{
     .confiar_en_nosotros_article{
         max-width: 60%;
     }
-    /* Noticias */
-    .noticias_article{
+}
+@media (max-width: 1280px){
+    /* Últimos modelos disponibles */
+    .productos_section{
         flex-direction: column;
         align-items: center;
-        justify-content: center;
-    }
-    .imagen_noticia{
-        width: 25rem;
-        height: auto;
-    }
-    .noticias_article{
-        font-size: 1rem;
     }
 }
-@media (max-width: 1050px){
-
+@media (max-width: 850px) {
+    /* Nuestras redes sociales */
+    .redes_section {
+        flex-direction: column;
+        align-items: center;
+    }
+    .preguntas_section {
+        flex-direction: column;
+        align-items: center;
+    }
+    .preguntas_article{
+        max-width: 60%;
+    }
 }
-
-
-
+@media (max-width: 900px) {
+    /* Otras marcas colaboradoras (section1) */
+    .marcas_section1{
+        flex-direction: column;
+        align-items: center;
+    }
+}
+@media (max-width: 700px) {
+    /* Otras marcas colaboradoras (section2) */
+    .marcas_section2{
+        flex-direction: column;
+        align-items: center;
+    }
+}
+@media (max-width: 800px) {
+    /* Nuestra marca colaboradora nº1 */
+    .marca_lamborguini_article{
+        flex-direction: column;
+        align-items: center;
+    }
+}
